syntax = "proto3";

option go_package = "github.com/sonm-io/core/proto;sonm";

package sonm;

message Addr {
    // Protocol describes the underlying transport protocol, for example "tcp"
    // or "udp".
    string protocol = 1;
    SocketAddr addr = 2;
}

message SocketAddr {
    // Addr describes an IP address.
    string addr = 1;
    // Port describes a port number.
    // Actually an `uint16` here. Protobuf is so clear and handy.
    uint32 port = 2;
}

message Endpoints {
    repeated SocketAddr endpoints = 1;
}
